Trying to add onclick function

--- a/webdevpractice.html
+++ b/webdevpractice.html
@@ -18,6 +18,7 @@
             <hr>
         </header>
         <div class="ttc-board">
+            <script src="js/webdevpracticefunctions.js"></script>
             <div id="square-one" class="ttc-square"></div>
             <div id="square-two" class="ttc-square"></div>
             <div id="square-three" class="ttc-square"></div>
