--- a/webdevpractice.html
+++ b/webdevpractice.html
@@ -18,16 +18,16 @@
             <hr>
         </header>
         <div class="ttc-board">
+            <div id="0" class="ttc-square"></div>
+            <div id="1" class="ttc-square"></div>
+            <div id="2" class="ttc-square"></div>
+            <div id="3" class="ttc-square"></div>
+            <div id="4" class="ttc-square"></div>
+            <div id="5" class="ttc-square"></div>
+            <div id="6" class="ttc-square"></div>
+            <div id="7" class="ttc-square"></div>
+            <div id="8" class="ttc-square"></div>            
             <script src="js/webdevpracticefunctions.js"></script>
-            <div id="square-one" class="ttc-square"></div>
-            <div id="square-two" class="ttc-square"></div>
-            <div id="square-three" class="ttc-square"></div>
-            <div id="square-four" class="ttc-square"></div>
-            <div id="square-five" class="ttc-square"></div>
-            <div id="square-six" class="ttc-square"></div>
-            <div id="square-seven" class="ttc-square"></div>
-            <div id="square-eight" class="ttc-square"></div>
-            <div id="square-nine" class="ttc-square"></div>
         </div>
     </body>
 </html>
